# z80debug

./: .gitignore  CMakeLists.txt  breakpoint.cpp  codewidget.cpp  codewidget.h  loaddialog.ui  main.cpp  mainwindow.h  mainwindow.ui  mapreader.h  options.h  readme.md  registeritem.h  simulator.cpp
src/: main.cpp  options.cpp  options.h
src/qhexedit/: chunks.cpp  chunks.h  commands.cpp  commands.h  qhexedit.cpp  qhexedit.h
src/simulator/: breakpoint.h  mapreader.cpp  mapreader.h  registeritem.cpp  registeritem.h  registermodel.cpp  registermodel.h  simulator.cpp  simulator.h
src/ui/: codewidget.cpp  codewidget.h  highlighter.cpp  highlighter.h  loaddialog.cpp  loaddialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
